<resources>
    <string name="app_name">Asignaturas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="agregar_asignatura" />
    <string name="mostrar_asignaturas" />
    <string name="nota_de_asignatura" />
    <string name="calificaci_n" />
    <string name="nombre_de_asignatura" />
    <string name="asignatura" />
    <string name="nombre_de_la_asignatura">Nombre de la asignatura</string>
    <string name="nota">Nota</string>
    <string name="agregar_asignaturan">Agregar asignatura</string>
    <string name="mostrar_asignatura">Mostrar asignatura</string>
    <string name="modificar_asignatura">Modificar Asignatura</string>
    <string name="borrar_asignatura">Borrar asignatura</string>
</resources>